Add funcionalidad 'Buscar empleado por especialización JS'

--- a/Modulo-2/employeeDetails/employee_details.html
+++ b/Modulo-2/employeeDetails/employee_details.html
@@ -13,6 +13,7 @@
             <button onclick="calculateTotalSalaries()">Calcular Sueldos Totales</button>
             <button onclick="displayHREmployees()">Mostrar Empleados de RRHH</button>
             <button onclick="findEmployeeById(2)">Buscar Empleado por ID 2</button>
+            <button onclick="findEmployeeBySpecialization('JavaScript')">Buscar Empleado por Especialización JavaScript</button>
         </div>
         
         <div id="employeesDetails"></div>
