Add funcionalidad de borrar todas las tareas

--- a/Modulo-3/TodoList/todo_list.html
+++ b/Modulo-3/TodoList/todo_list.html
@@ -18,6 +18,8 @@
         
         <button id="clearCompletedBtn">Clear Completed</button>
 
+        <button id="clearAllBtn">Clear All</button>
+
         <script src="./todo_list.js"></script>
     </body>
 </html>
